--- a/NetBeansProjects/LastTry/src/ui/SupplierRole/SupplierWorkAreaJPanel.form
+++ b/NetBeansProjects/LastTry/src/ui/SupplierRole/SupplierWorkAreaJPanel.form
@@ -25,7 +25,7 @@
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="1" attributes="0">
-              <EmptySpace pref="404" max="32767" attributes="0"/>
+              <EmptySpace pref="395" max="32767" attributes="0"/>
               <Group type="103" groupAlignment="1" attributes="0">
                   <Group type="103" groupAlignment="0" attributes="0">
                       <Component id="btnProductPerformance" min="-2" max="-2" attributes="0"/>
@@ -71,7 +71,10 @@
     <Component class="javax.swing.JButton" name="btnManageProductCatalog">
       <Properties>
         <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-          <Color blue="cc" green="ff" red="99" type="rgb"/>
+          <Color blue="ff" green="ff" red="cc" type="rgb"/>
+        </Property>
+        <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+          <Font name="Segoe UI" size="12" style="1"/>
         </Property>
         <Property name="text" type="java.lang.String" value="Manage Personel Directory &gt;&gt;"/>
       </Properties>
