--- a/NetBeansProjects/LastTry/src/ui/SupplierRole/CreateNewProductJPanel.form
+++ b/NetBeansProjects/LastTry/src/ui/SupplierRole/CreateNewProductJPanel.form
@@ -114,7 +114,7 @@
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Tahoma" size="13" style="0"/>
         </Property>
-        <Property name="text" type="java.lang.String" value="Product ID:"/>
+        <Property name="text" type="java.lang.String" value="Doctor ID:"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JTextField" name="txtId">
