--- a/NetBeansProjects/LastTry/src/ui/SupplierRole/ViewProductDetailJPanel.form
+++ b/NetBeansProjects/LastTry/src/ui/SupplierRole/ViewProductDetailJPanel.form
@@ -22,10 +22,11 @@
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="1" attributes="0">
-              <EmptySpace pref="203" max="32767" attributes="0"/>
+              <EmptySpace pref="202" max="32767" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
                   <Component id="lblProductId" alignment="1" min="-2" max="-2" attributes="0"/>
                   <Component id="lblProductName" alignment="1" min="-2" max="-2" attributes="0"/>
+                  <Component id="lblProductPrice1" alignment="1" min="-2" max="-2" attributes="0"/>
                   <Component id="lblProductPrice" alignment="1" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace type="separate" max="-2" attributes="0"/>
@@ -35,6 +36,7 @@
                   <Component id="txtName" alignment="0" min="-2" pref="159" max="-2" attributes="0"/>
                   <Component id="txtId" alignment="0" min="-2" pref="159" max="-2" attributes="0"/>
                   <Component id="txtPrice" alignment="0" min="-2" pref="159" max="-2" attributes="0"/>
+                  <Component id="txtAvail" min="-2" pref="159" max="-2" attributes="0"/>
               </Group>
               <EmptySpace min="-2" pref="196" max="-2" attributes="0"/>
           </Group>
@@ -70,11 +72,16 @@
                   <Component id="lblProductPrice" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="txtPrice" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace min="-2" pref="31" max="-2" attributes="0"/>
+              <EmptySpace type="unrelated" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="3" attributes="0">
+                  <Component id="lblProductPrice1" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="txtAvail" alignment="3" min="-2" max="-2" attributes="0"/>
+              </Group>
+              <EmptySpace min="-2" pref="9" max="-2" attributes="0"/>
               <Component id="btnUpdate" min="-2" max="-2" attributes="0"/>
-              <EmptySpace type="separate" max="-2" attributes="0"/>
+              <EmptySpace max="-2" attributes="0"/>
               <Component id="btnSave" min="-2" max="-2" attributes="0"/>
-              <EmptySpace pref="296" max="32767" attributes="0"/>
+              <EmptySpace pref="291" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -142,6 +149,16 @@
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnSaveActionPerformed"/>
       </Events>
+    </Component>
+    <Component class="javax.swing.JLabel" name="lblProductPrice1">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Spot Available"/>
+      </Properties>
+    </Component>
+    <Component class="javax.swing.JTextField" name="txtAvail">
+      <Properties>
+        <Property name="editable" type="boolean" value="false"/>
+      </Properties>
     </Component>
   </SubComponents>
 </Form>
