--- a/NetBeansProjects/LastTry/src/ui/XupplierRole/LoginXupplierJPanel.form
+++ b/NetBeansProjects/LastTry/src/ui/XupplierRole/LoginXupplierJPanel.form
@@ -74,7 +74,7 @@
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Tahoma" size="14" style="0"/>
         </Property>
-        <Property name="text" type="java.lang.String" value="Choose your supplier account:"/>
+        <Property name="text" type="java.lang.String" value="Choose community for Patients:"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JComboBox" name="cmbZupplier">
