--- a/NetBeansProjects/LastTry/src/ui/XupplierRole/SearchxForDroductJPanel.form
+++ b/NetBeansProjects/LastTry/src/ui/XupplierRole/SearchxForDroductJPanel.form
@@ -66,7 +66,7 @@
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Tahoma" size="18" style="0"/>
         </Property>
-        <Property name="text" type="java.lang.String" value="Search for Droduct"/>
+        <Property name="text" type="java.lang.String" value="Search for Patient"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JButton" name="btnBack">
@@ -79,7 +79,7 @@
     </Component>
     <Component class="javax.swing.JLabel" name="lblProductId">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Product Id:"/>
+        <Property name="text" type="java.lang.String" value="Patient Id:"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JTextField" name="txtId">
