--- a/NetBeansProjects/LastTry/src/ui/XupplierRole/TearchxResultJPanel.form
+++ b/NetBeansProjects/LastTry/src/ui/XupplierRole/TearchxResultJPanel.form
@@ -48,7 +48,7 @@
                       <Component id="btnSave" min="-2" pref="107" max="-2" attributes="0"/>
                   </Group>
               </Group>
-              <EmptySpace pref="169" max="32767" attributes="0"/>
+              <EmptySpace pref="141" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -91,12 +91,12 @@
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Tahoma" size="18" style="0"/>
         </Property>
-        <Property name="text" type="java.lang.String" value="View Droduct Detail"/>
+        <Property name="text" type="java.lang.String" value="View Patient Detail"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JLabel" name="lblProductName">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Product Name:"/>
+        <Property name="text" type="java.lang.String" value="Patient Name:"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JTextField" name="txtName">
@@ -106,7 +106,7 @@
     </Component>
     <Component class="javax.swing.JLabel" name="lblPrice">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Product Price:"/>
+        <Property name="text" type="java.lang.String" value="Doctor rating"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JTextField" name="txtPrice">
@@ -116,7 +116,7 @@
     </Component>
     <Component class="javax.swing.JButton" name="btnUpdate">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Update Product"/>
+        <Property name="text" type="java.lang.String" value="Update Doctor Info"/>
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnUpdateActionPerformed"/>
@@ -137,7 +137,7 @@
     </Component>
     <Component class="javax.swing.JLabel" name="lblProductId">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Product ID:"/>
+        <Property name="text" type="java.lang.String" value="Doctor ID:"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JButton" name="btnSave">
