--- a/NetBeansProjects/LastTry/src/ui/XupplierRole/ViewxDroductDetailJPanel.form
+++ b/NetBeansProjects/LastTry/src/ui/XupplierRole/ViewxDroductDetailJPanel.form
@@ -21,29 +21,46 @@
   <Layout>
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Group type="102" alignment="1" attributes="0">
-              <EmptySpace pref="206" max="32767" attributes="0"/>
-              <Group type="103" groupAlignment="0" attributes="0">
-                  <Component id="lblProductId" alignment="1" min="-2" max="-2" attributes="0"/>
-                  <Component id="lblProductName" alignment="1" min="-2" max="-2" attributes="0"/>
-                  <Component id="lblProductPrice" alignment="1" min="-2" max="-2" attributes="0"/>
-              </Group>
-              <EmptySpace type="separate" max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="0" attributes="0">
-                  <Component id="btnSave" min="-2" pref="123" max="-2" attributes="0"/>
-                  <Component id="btnUpdate" min="-2" pref="121" max="-2" attributes="0"/>
-                  <Component id="txtName" alignment="0" min="-2" pref="159" max="-2" attributes="0"/>
-                  <Component id="txtId" alignment="0" min="-2" pref="159" max="-2" attributes="0"/>
-                  <Component id="txtPrice" alignment="0" min="-2" pref="159" max="-2" attributes="0"/>
-              </Group>
-              <EmptySpace min="-2" pref="196" max="-2" attributes="0"/>
-          </Group>
           <Group type="102" alignment="0" attributes="0">
               <EmptySpace min="-2" pref="24" max="-2" attributes="0"/>
               <Component id="btnBack" min="-2" max="-2" attributes="0"/>
               <EmptySpace min="-2" pref="172" max="-2" attributes="0"/>
               <Component id="lblTitle" min="-2" max="-2" attributes="0"/>
               <EmptySpace max="32767" attributes="0"/>
+          </Group>
+          <Group type="102" alignment="1" attributes="0">
+              <EmptySpace pref="199" max="32767" attributes="0"/>
+              <Group type="103" groupAlignment="1" attributes="0">
+                  <Group type="102" attributes="0">
+                      <Group type="103" groupAlignment="0" attributes="0">
+                          <Component id="lblProductId" alignment="1" min="-2" max="-2" attributes="0"/>
+                          <Component id="lblProductName" alignment="1" min="-2" max="-2" attributes="0"/>
+                          <Component id="lblProductPrice" alignment="1" min="-2" max="-2" attributes="0"/>
+                          <Component id="lblProductPrice1" alignment="1" min="-2" max="-2" attributes="0"/>
+                      </Group>
+                      <EmptySpace type="separate" max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="0" attributes="0">
+                          <Component id="btnSave" min="-2" pref="123" max="-2" attributes="0"/>
+                          <Component id="btnUpdate" min="-2" pref="121" max="-2" attributes="0"/>
+                          <Component id="txtName" alignment="0" min="-2" pref="159" max="-2" attributes="0"/>
+                          <Component id="txtId" alignment="0" min="-2" pref="159" max="-2" attributes="0"/>
+                          <Component id="txtPrice" alignment="0" min="-2" pref="159" max="-2" attributes="0"/>
+                          <Component id="txtPulse" min="-2" pref="159" max="-2" attributes="0"/>
+                      </Group>
+                  </Group>
+                  <Group type="102" alignment="1" attributes="0">
+                      <Group type="103" groupAlignment="1" attributes="0">
+                          <Component id="lblProductPrice2" min="-2" max="-2" attributes="0"/>
+                          <Component id="lblProductPrice3" min="-2" max="-2" attributes="0"/>
+                      </Group>
+                      <EmptySpace type="separate" max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                          <Component id="txtTemperature" pref="159" max="32767" attributes="0"/>
+                          <Component id="txtDate" max="32767" attributes="0"/>
+                      </Group>
+                  </Group>
+              </Group>
+              <EmptySpace min="-2" pref="196" max="-2" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -70,11 +87,26 @@
                   <Component id="lblProductPrice" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="txtPrice" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace min="-2" pref="31" max="-2" attributes="0"/>
+              <EmptySpace max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="3" attributes="0">
+                  <Component id="txtPulse" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="lblProductPrice1" alignment="3" min="-2" max="-2" attributes="0"/>
+              </Group>
+              <EmptySpace type="separate" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="3" attributes="0">
+                  <Component id="txtTemperature" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="lblProductPrice2" alignment="3" min="-2" max="-2" attributes="0"/>
+              </Group>
+              <EmptySpace type="separate" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="3" attributes="0">
+                  <Component id="txtDate" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="lblProductPrice3" alignment="3" min="-2" max="-2" attributes="0"/>
+              </Group>
+              <EmptySpace pref="73" max="32767" attributes="0"/>
               <Component id="btnUpdate" min="-2" max="-2" attributes="0"/>
               <EmptySpace type="separate" max="-2" attributes="0"/>
               <Component id="btnSave" min="-2" max="-2" attributes="0"/>
-              <EmptySpace pref="296" max="32767" attributes="0"/>
+              <EmptySpace min="-2" pref="141" max="-2" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -85,22 +117,25 @@
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Tahoma" size="18" style="0"/>
         </Property>
-        <Property name="text" type="java.lang.String" value="View Droduct Details"/>
+        <Property name="text" type="java.lang.String" value="View Patient Details"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JLabel" name="lblProductName">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Product Name:"/>
+        <Property name="text" type="java.lang.String" value="Patient Name:"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JTextField" name="txtName">
       <Properties>
         <Property name="editable" type="boolean" value="false"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="txtNameActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JLabel" name="lblProductPrice">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Product Price:"/>
+        <Property name="text" type="java.lang.String" value="Blood Pressure"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JTextField" name="txtPrice">
@@ -110,7 +145,7 @@
     </Component>
     <Component class="javax.swing.JButton" name="btnUpdate">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Update Product"/>
+        <Property name="text" type="java.lang.String" value="Update"/>
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnUpdateActionPerformed"/>
@@ -131,7 +166,7 @@
     </Component>
     <Component class="javax.swing.JLabel" name="lblProductId">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Product ID:"/>
+        <Property name="text" type="java.lang.String" value="Patient ID:"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JButton" name="btnSave">
@@ -141,6 +176,42 @@
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnSaveActionPerformed"/>
+      </Events>
+    </Component>
+    <Component class="javax.swing.JLabel" name="lblProductPrice1">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Pulse"/>
+      </Properties>
+    </Component>
+    <Component class="javax.swing.JTextField" name="txtPulse">
+      <Properties>
+        <Property name="editable" type="boolean" value="false"/>
+      </Properties>
+    </Component>
+    <Component class="javax.swing.JTextField" name="txtTemperature">
+      <Properties>
+        <Property name="editable" type="boolean" value="false"/>
+      </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="txtTemperatureActionPerformed"/>
+      </Events>
+    </Component>
+    <Component class="javax.swing.JLabel" name="lblProductPrice2">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Temperature"/>
+      </Properties>
+    </Component>
+    <Component class="javax.swing.JLabel" name="lblProductPrice3">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Date"/>
+      </Properties>
+    </Component>
+    <Component class="javax.swing.JTextField" name="txtDate">
+      <Properties>
+        <Property name="editable" type="boolean" value="false"/>
+      </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="txtDateActionPerformed"/>
       </Events>
     </Component>
   </SubComponents>
