--- a/NetBeansProjects/LastTry/src/ui/MainJFrame.form
+++ b/NetBeansProjects/LastTry/src/ui/MainJFrame.form
@@ -64,13 +64,13 @@
                       <EmptySpace max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
                           <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                              <Component id="btnAdmin" linkSize="2" alignment="0" pref="136" max="32767" attributes="1"/>
                               <Component id="btnSupplier" linkSize="2" alignment="0" pref="136" max="32767" attributes="1"/>
                               <Component id="btnStart" max="32767" attributes="0"/>
                               <Component id="jButton1" alignment="0" max="32767" attributes="0"/>
                               <Component id="btnCustomer" alignment="0" max="32767" attributes="1"/>
                           </Group>
                           <Component id="btnZupplier" alignment="0" min="-2" pref="136" max="-2" attributes="0"/>
+                          <Component id="btnAdmin" linkSize="2" alignment="0" pref="136" max="32767" attributes="1"/>
                       </Group>
                       <EmptySpace pref="8" max="32767" attributes="0"/>
                   </Group>
@@ -81,13 +81,13 @@
                   <Group type="102" alignment="0" attributes="0">
                       <EmptySpace min="-2" pref="19" max="-2" attributes="0"/>
                       <Component id="btnStart" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace min="-2" pref="52" max="-2" attributes="0"/>
-                      <Component id="btnAdmin" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace max="-2" attributes="0"/>
-                      <Component id="btnSupplier" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace max="-2" attributes="0"/>
-                      <Component id="btnZupplier" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace pref="128" max="32767" attributes="0"/>
+                      <EmptySpace min="-2" pref="44" max="-2" attributes="0"/>
+                      <Component id="btnAdmin" min="-2" pref="42" max="-2" attributes="0"/>
+                      <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                      <Component id="btnSupplier" min="-2" pref="43" max="-2" attributes="0"/>
+                      <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                      <Component id="btnZupplier" min="-2" pref="45" max="-2" attributes="0"/>
+                      <EmptySpace pref="57" max="32767" attributes="0"/>
                       <Component id="btnCustomer" min="-2" pref="77" max="-2" attributes="0"/>
                       <EmptySpace min="-2" pref="26" max="-2" attributes="0"/>
                       <Component id="jButton1" min="-2" pref="72" max="-2" attributes="0"/>
